[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/roads/road_switch.png" type="Texture" id=1]
[ext_resource path="res://scripts/roads/road_switch.gd" type="Script" id=2]
[ext_resource path="res://sprites/roads/road_visualiser.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[node name="road_switch" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
next_road_swithces = [ NodePath("") ]

[node name="spr" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="road_visualisers" type="Node2D" parent="."]
show_behind_parent = true

[node name="visualiser" type="Line2D" parent="road_visualisers"]
z_index = -100
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 1

[connection signal="body_entered" from="." to="." method="_on_road_switch_body_entered"]
